# discord-ext-typed-commands

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: codeql-analysis.yml  release.yml  unit-tests.yml
discord/ext/typed_commands/: __init__.py  __init__.pyi
scripts/: release.sh
tests/: test_bot.py  test_classes.py
