[tool.poetry]
name = "discord-ext-typed-commands"
version = "1.0.2.dev0"
description = "Typed commands for discord.py"
homepage = "https://github.com/bryanforbes/discord-ext-typed-commands"
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
  { include = "discord" },
  { include = "tests", format = "sdist" },
  { include = "mypy.ini", format = "sdist" },
]
include = [
  "discord/ext/typed_commands/py.typed"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6.1"
"discord.py" = "^1.4.1"
importlib_metadata = {version = ">=1.7,<3.0", python = "<3.8"}
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
"discord.py-stubs" = "^1.4.0"
flake8 = "^3.8.4"
flake8-pyi = "^20.5.0"
isort = "^5.5.4"
mypy = "^0.782"
pre-commit = "^2.7.1"
pytest = "^6.1.0"

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | external
)/
'''

[tool.isort]
extra_standard_library = ["typing_extensions"]
virtual_env = ".venv"
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
  "ignore",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
