[tool.poetry]
name = "discord-ext-typed-commands"
version = "1.0.4dev0"
description = "Typed commands for discord.py"
homepage = "https://github.com/bryanforbes/discord-ext-typed-commands"
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
  { include = "discord" },
  { include = "tests", format = "sdist" },
  { include = "mypy.ini", format = "sdist" },
]
include = [
  "discord/ext/typed_commands/py.typed"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6.2"
"discord.py" = "^1.4.1"
importlib_metadata = {version = ">=1.7,<5.0", python = "<3.8"}
typing-extensions = {version = "^3.7.4", python = "<3.8"}

[tool.poetry.dev-dependencies]
black = "^21.7b0"
"discord.py-stubs" = "^1.4.0"
flake8 = "^3.9.2"
flake8-pyi = "^20.10.0"
isort = "^5.9.3"
mypy = ">=0.782"
pre-commit = "^2.13.0"
pytest = "^6.2.4"

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | external
)/
'''

[tool.isort]
virtual_env = ".venv"
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
  "ignore",
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
